clusters/9ka/netbox/netbox-kea-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-kea
  labels:
    app.kubernetes.io/name: netbox-kea
    app.kubernetes.io/instance: netbox-kea-efgh
    app.kubernetes.io/version: 0.0.1a10
  namespace: netbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbox-kea
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbox-kea
    spec:
      containers:
      - name: netbox-kea
        image: ghcr.io/jonkerj/netbox-kea-dhcp:v0.0.1-alpha10oci2
        args:
        - -c
        - /config/efgh.toml
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          tcpSocket:
            port: http
        startupProbe:
          tcpSocket:
            port: http
          failureThreshold: 120
          periodSeconds: 2
        resources:
          limits:
            cpu: 1000m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 32Mi
      volumes:
      - name: config
        secret:
          secretName: netbox-kea-config
