clusters/9ka/netbox/ingress-netbox-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: netbox
  name: netbox-api
  namespace: netbox
spec:
  ingressClassName: nginx
  rules:
  - host: netbox.9ka.nl
    http:
      paths:
      - backend:
          service:
            name: netbox
            port:
              name: http
        path: /api
        pathType: Prefix
